[db] Add select node_count #1086 (#1117)
* add node_count query

* add to api

* add to docs
