# agdb_server/openapi/schema.json
@@ -2854,6 +2854,17 @@
           {
             "type": "object",
             "required": [
+              "SelectNodeCount"
+            ],
+            "properties": {
+              "SelectNodeCount": {
+                "$ref": "#/components/schemas/SelectNodeCountQuery"
+              }
+            }
+          },
+          {
+            "type": "object",
+            "required": [
               "SelectValues"
             ],
             "properties": {
@@ -3016,6 +3027,10 @@
       },
       "SelectKeysQuery": {
         "$ref": "#/components/schemas/QueryIds"
+      },
+      "SelectNodeCountQuery": {
+        "type": "object",
+        "description": "Query to select number of nodes in the database.\n\nThe result will be 1 and elements with a single element\nof id 0 and a single property `String(\"node_count\")` with\na value `u64` represneting number of nodes in teh database."
       },
       "SelectQuery": {
         "$ref": "#/components/schemas/QueryIds"
